--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_svg: ^2.0.9
   firebase_core: ^4.2.0
   cloud_firestore: ^6.0.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
