--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_native_timezone:
     path: packages/flutter_native_timezone
   timezone: ^0.9.4
+  google_sign_in: ^6.2.1
 
   # Manejo de estado (útil para avatar, usuario, settings)
   provider: ^6.1.2
@@ -45,11 +46,18 @@ dependencies:
   # 🔊 AUDIO PARA POMODORO Y EJERCICIOS DE RELAJACIÓN
   audioplayers: ^6.0.0
   vibration: ^3.1.4
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: assets/images/Logo.png
 
 flutter:
   uses-material-design: true
