--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,24 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"organizate-26065","appId":"1:755867602564:android:df257a7a567975b33bbcd1","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"organizate-26065","configurations":{"android":"1:755867602564:android:df257a7a567975b33bbcd1"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "organizate-26065",
+          "appId": "1:755867602564:android:df257a7a567975b33bbcd1",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "organizate-26065",
+          "configurations": {
+            "android": "1:755867602564:android:df257a7a567975b33bbcd1"
+          }
+        }
+      }
+    }
+  },
+  "functions": {
+    "source": "functions"
+  }
+}
