--- a/functions/package.json
+++ b/functions/package.json
@@ -18,6 +18,7 @@
     "firebase-functions": "^4.8.2"
   },
   "devDependencies": {
+    "firebase-tools": "^13.6.0",
     "rimraf": "^6.0.1",
     "typescript": "^5.6.3"
   }
